--- a/app/src/main/res/layout/activity_add_pres_info.xml
+++ b/app/src/main/res/layout/activity_add_pres_info.xml
@@ -16,77 +16,106 @@
         app:srcCompat="@drawable/header" />
 
     <ScrollView
-        android:layout_width="407dp"
-        android:layout_height="553dp"
+        android:layout_width="410dp"
+        android:layout_height="613dp"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/imageView11">
+        app:layout_constraintTop_toBottomOf="@+id/imageView11"
+        app:layout_constraintVertical_bias="0.0">
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="vertical">
-
-            <TextView
-                android:id="@+id/textView35"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_margin="15dp"
-                android:drawableStart="@drawable/ic_baseline_check_24"
-                android:gravity="center"
-                android:text="Prescription Attach  Succesfully"
-                android:textSize="18sp" />
+            android:orientation="vertical" >
 
             <ImageView
                 android:id="@+id/pres_image"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_margin="20dp"
                 tools:srcCompat="@tools:sample/avatars" />
 
-            <EditText
-                android:id="@+id/editTextTextPersonName3"
-                android:layout_width="match_parent"
-                android:layout_height="62dp"
-                android:layout_margin="12dp"
-                android:background="@drawable/btn03style"
-                android:ems="10"
-                android:hint="Enter your City/State"
-                android:inputType="textPersonName"
-                android:paddingStart="7dp" />
-
-            <EditText
-                android:id="@+id/editTextTextPersonName4"
-                android:layout_width="match_parent"
-                android:layout_height="62dp"
-                android:layout_margin="12dp"
-                android:background="@drawable/btn03style"
-                android:ems="10"
-                android:hint="Enter Postal code"
-                android:inputType="textPersonName"
-                android:paddingStart="7dp" />
-
-            <EditText
-                android:id="@+id/editTextTextPersonName5"
-                android:layout_width="match_parent"
-                android:layout_height="62dp"
-                android:layout_margin="12dp"
-                android:background="@drawable/btn03style"
-                android:ems="10"
-                android:hint="Enter address"
-                android:inputType="textPersonName"
-                android:paddingStart="7dp" />
-
-            <Button
-                android:id="@+id/upload_save"
+            <TextView
+                android:id="@+id/textView34"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="20dp"
-                android:layout_marginEnd="20dp"
+                android:drawableStart="@drawable/ic_baseline_check_24"
+                android:gravity="center"
+                android:text="Prescriptin Attached Success"
+                android:textColor="#12AA16" />
+
+            <EditText
+                android:id="@+id/Pres_city"
+                android:layout_width="388dp"
+                android:layout_height="49dp"
+                android:layout_margin="10dp"
+                android:background="@drawable/btn03style"
+                android:ems="10"
+                android:hint="Enter City Or State"
+                android:inputType="textPersonName"
+                android:paddingLeft="6dp" />
+
+            <EditText
+                android:id="@+id/pres_postcode"
+                android:layout_width="match_parent"
+                android:layout_height="49dp"
+                android:layout_margin="10dp"
+                android:background="@drawable/btn03style"
+                android:ems="10"
+                android:hint="Postal code"
+                android:inputType="textPersonName"
+                android:paddingLeft="6dp" />
+
+            <EditText
+                android:id="@+id/pres_address"
+                android:layout_width="match_parent"
+                android:layout_height="49dp"
+                android:layout_margin="10dp"
+                android:background="@drawable/btn03style"
+                android:ems="10"
+                android:hint="@string/address"
+                android:inputType="textPersonName"
+                android:paddingLeft="6dp" />
+
+            <EditText
+                android:id="@+id/pres_phone"
+                android:layout_width="match_parent"
+                android:layout_height="49dp"
+                android:layout_margin="10dp"
+                android:background="@drawable/btn03style"
+                android:ems="10"
+                android:hint="Phone"
+                android:inputType="number"
+                android:paddingLeft="6dp" />
+
+            <Button
+                android:id="@+id/contineBtn"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="20dp"
+                android:layout_marginRight="20dp"
                 android:background="@drawable/buttontype02"
-                android:text="Save And Next"
+                android:text="Continue"
                 app:backgroundTint="@android:color/holo_blue_light" />
 
         </LinearLayout>
     </ScrollView>
+
+    <TextView
+        android:id="@+id/textView27"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Add Address"
+        android:textColor="#FFFFFF"
+        android:textSize="18sp"
+        app:layout_constraintBottom_toBottomOf="@+id/imageView11"
+        app:layout_constraintEnd_toEndOf="@+id/imageView11"
+        app:layout_constraintHorizontal_bias="0.13"
+        app:layout_constraintStart_toStartOf="@+id/imageView11"
+        app:layout_constraintTop_toTopOf="@+id/imageView11"
+        app:layout_constraintVertical_bias="0.727" />
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
