--- a/app/src/main/res/layout/activity_upload_prescription.xml
+++ b/app/src/main/res/layout/activity_upload_prescription.xml
@@ -24,14 +24,14 @@
             android:id="@+id/textView33"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="40dp"
-            android:layout_marginTop="32dp"
-            android:drawableStart="@drawable/ic_back"
+            android:layout_marginStart="24dp"
+            android:layout_marginTop="56dp"
             android:text="Uploads Prescription"
             android:textColor="#FDFDFD"
             android:textSize="18sp"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
+
     </androidx.constraintlayout.widget.ConstraintLayout>
 
     <ImageView
@@ -40,11 +40,17 @@
         android:layout_height="225dp"
         app:srcCompat="@drawable/doctor" />
 
+    <ImageView
+        android:id="@+id/imageView13"
+        android:layout_width="match_parent"
+        android:layout_height="104dp"
+        app:srcCompat="@drawable/list" />
+
     <TextView
         android:id="@+id/valid_pres"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="100dp"
+        android:layout_marginTop="50dp"
         android:gravity="center"
         android:text="What is Valid Prescription ?"
         android:textSize="18sp" />
@@ -54,11 +60,14 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginStart="20dp"
-        android:layout_marginTop="100dp"
+        android:layout_marginTop="60dp"
         android:layout_marginEnd="20dp"
         android:background="@drawable/buttontype02"
         android:gravity="center"
         android:text="@string/upload_prescription"
         app:backgroundTint="@android:color/holo_blue_dark" />
+
+
+
 
 </LinearLayout>
