--- a/app/src/main/res/layout/valid_pres_giudeline.xml
+++ b/app/src/main/res/layout/valid_pres_giudeline.xml
@@ -1,5 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="vertical">
@@ -8,12 +10,19 @@
         android:id="@+id/textView26"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="20dp"
 
+        android:layout_margin="40dp"
         android:gravity="center"
         android:text="Valid Prescription Guide"
         android:textColor="#070707"
         android:textSize="30sp" />
+
+    <ImageView
+        android:id="@+id/imageView12"
+        android:layout_width="414dp"
+        android:layout_height="85dp"
+        android:layout_gravity="center"
+        app:srcCompat="@drawable/list" />
 
     <TextView
         android:id="@+id/textView28"
