--- a/app/src/main/res/layout/activity_pres_order_over_view.xml
+++ b/app/src/main/res/layout/activity_pres_order_over_view.xml
@@ -6,4 +6,31 @@
     android:layout_height="match_parent"
     tools:context=".PresOrderOverView">
 
+    <TextView
+        android:id="@+id/successtitle"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:fontFamily="sans-serif-thin"
+        android:text="All Are Set !"
+        android:textSize="36sp"
+        android:textStyle="bold"
+        android:drawableStart="@drawable/ic_check_pres"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.141"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.088" />
+
+    <ImageView
+        android:id="@+id/over_pres_image"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="136dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.113"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        tools:srcCompat="@tools:sample/avatars" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
