--- a/app/src/main/res/layout/activity_patient_sign_up.xml
+++ b/app/src/main/res/layout/activity_patient_sign_up.xml
@@ -1,5 +1,3 @@
-<?xml version="1.0" encoding="utf-8"?>
-
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
@@ -15,7 +13,7 @@
         <ImageView
             android:id="@+id/imageView5"
             android:layout_width="0dp"
-            android:layout_height="400dp"
+            android:layout_height="500dp"
             android:layout_marginTop="16dp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.0"
@@ -32,7 +30,7 @@
             android:layout_marginEnd="16dp"
             android:background="@drawable/login_edit_text"
             android:ems="10"
-            android:hint="@string/name"
+            android:hint="@string/firstName"
             android:inputType="textPersonName"
             android:paddingLeft="8dp"
             app:layout_constraintEnd_toEndOf="parent"
@@ -40,7 +38,7 @@
             app:layout_constraintTop_toTopOf="@+id/imageView5" />
 
         <EditText
-            android:id="@+id/sign_up_hospital"
+            android:id="@+id/sign_up_last_name"
             android:layout_width="0dp"
             android:layout_height="50dp"
             android:layout_marginStart="16dp"
@@ -48,7 +46,7 @@
             android:layout_marginEnd="16dp"
             android:background="@drawable/login_edit_text"
             android:ems="10"
-            android:hint="@string/hospital"
+            android:hint="@string/lastName"
             android:inputType="textPersonName"
             android:paddingLeft="8dp"
             app:layout_constraintEnd_toEndOf="parent"
@@ -56,7 +54,7 @@
             app:layout_constraintTop_toBottomOf="@+id/sign_up_first_name" />
 
         <EditText
-            android:id="@+id/sign_up_specilization"
+            android:id="@+id/sign_up_dob"
             android:layout_width="0dp"
             android:layout_height="50dp"
             android:layout_marginStart="16dp"
@@ -64,15 +62,49 @@
             android:layout_marginEnd="16dp"
             android:background="@drawable/login_edit_text"
             android:ems="10"
-            android:hint="@string/specilization"
+            android:hint="@string/dob"
             android:inputType="textPersonName"
             android:paddingLeft="8dp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/sign_up_hospital" />
+            app:layout_constraintTop_toBottomOf="@+id/sign_up_last_name" />
 
         <EditText
-            android:id="@+id/sign_up_mobile"
+            android:id="@+id/sign_up_age"
+            android:layout_width="0dp"
+            android:layout_height="50dp"
+            android:layout_marginStart="16dp"
+            android:layout_marginTop="16dp"
+            android:layout_marginEnd="16dp"
+            android:background="@drawable/login_edit_text"
+            android:ems="10"
+            android:hint="@string/age"
+            android:inputType="textPersonName"
+            android:paddingLeft="8dp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.0"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/sign_up_dob" />
+
+        <EditText
+            android:id="@+id/sign_up_address"
+            android:layout_width="0dp"
+            android:layout_height="50dp"
+            android:layout_marginStart="16dp"
+            android:layout_marginTop="16dp"
+            android:layout_marginEnd="16dp"
+            android:background="@drawable/login_edit_text"
+            android:ems="10"
+            android:hint="@string/address"
+            android:inputType="textPersonName"
+            android:paddingLeft="8dp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.0"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/sign_up_age" />
+
+        <EditText
+            android:id="@+id/sign_up_patient_mobile"
             android:layout_width="0dp"
             android:layout_height="50dp"
             android:layout_marginStart="16dp"
@@ -81,12 +113,12 @@
             android:background="@drawable/login_edit_text"
             android:ems="10"
             android:hint="@string/mobile"
-            android:inputType="textPersonName"
+            android:inputType="number"
             android:paddingLeft="8dp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/sign_up_specilization" />
+            app:layout_constraintTop_toBottomOf="@+id/sign_up_address" />
 
         <TextView
             android:id="@+id/textView25"
@@ -100,7 +132,7 @@
             app:layout_constraintTop_toTopOf="parent" />
 
         <Button
-            android:id="@+id/saveBtn"
+            android:id="@+id/patientSaveBtn"
             android:layout_width="282dp"
             android:layout_height="54dp"
             android:layout_marginTop="16dp"
@@ -110,10 +142,10 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.508"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/doctorDetailsEnterProgressBar" />
+            app:layout_constraintTop_toBottomOf="@+id/patientDetailsEnterProgressBar" />
 
         <ProgressBar
-            android:id="@+id/doctorDetailsEnterProgressBar"
+            android:id="@+id/patientDetailsEnterProgressBar"
             style="?android:attr/progressBarStyle"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -122,7 +154,7 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/imageView5" />
-        
+
     </androidx.constraintlayout.widget.ConstraintLayout>
 
 </ScrollView>
