--- a/app/src/main/res/layout/activity_pres_order_over_view.xml
+++ b/app/src/main/res/layout/activity_pres_order_over_view.xml
@@ -33,4 +33,74 @@
         app:layout_constraintTop_toTopOf="parent"
         tools:srcCompat="@tools:sample/avatars" />
 
+    <TextView
+        android:id="@+id/over_pname"
+        android:layout_width="385dp"
+        android:layout_height="85dp"
+        android:layout_marginBottom="340dp"
+        android:background="@drawable/btn03style"
+        android:drawableTop="@drawable/ic_local_pharmacy"
+        android:gravity="center"
+        android:text="TextView"
+        android:textSize="18sp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.384"
+        app:layout_constraintStart_toStartOf="parent" />
+
+    <TextView
+        android:id="@+id/over_address"
+        android:layout_width="385dp"
+        android:layout_height="85dp"
+        android:layout_marginBottom="84dp"
+        android:background="@drawable/btn03style"
+        android:drawableTop="@drawable/ic_location"
+        android:gravity="center"
+        android:text="TextView"
+        android:textSize="18sp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.384"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/over_pname"
+        app:layout_constraintVertical_bias="0.076" />
+
+    <Button
+        android:id="@+id/upload_pres"
+        android:layout_width="296dp"
+        android:layout_height="63dp"
+        android:background="@drawable/buttontype02"
+        android:text="Upload All details"
+        app:backgroundTint="@android:color/holo_blue_dark"
+        app:layout_constraintBottom_toTopOf="@+id/button6"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/over_address"
+        app:layout_constraintVertical_bias="0.868" />
+
+    <Button
+        android:id="@+id/button6"
+        android:layout_width="239dp"
+        android:layout_height="52dp"
+        android:layout_marginBottom="56dp"
+        android:background="@drawable/buttontype02"
+        android:text="Cancel"
+        app:backgroundTint="@android:color/holo_red_light"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.505"
+        app:layout_constraintStart_toStartOf="parent" />
+
+    <ProgressBar
+        android:id="@+id/progressBar"
+        style="?android:attr/progressBarStyle"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.498"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/over_address"
+        app:layout_constraintVertical_bias="0.355" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
