--- a/app/src/main/res/layout/activity_edit_doctor2.xml
+++ b/app/src/main/res/layout/activity_edit_doctor2.xml
@@ -164,7 +164,6 @@
             android:id="@+id/updateDoctorBtn"
             android:layout_width="282dp"
             android:layout_height="54dp"
-            android:layout_marginTop="32dp"
             android:layout_marginBottom="16dp"
             android:background="@drawable/buttontype02"
             android:text="@string/update"
@@ -172,6 +171,17 @@
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.508"
+            app:layout_constraintStart_toStartOf="parent" />
+
+        <ProgressBar
+            android:id="@+id/updateProgressBar"
+            style="?android:attr/progressBarStyle"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="16dp"
+            android:layout_marginBottom="16dp"
+            app:layout_constraintBottom_toTopOf="@+id/updateDoctorBtn"
+            app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/imageView22" />
 
