--- a/app/src/main/res/layout/activity_edit_doctor2.xml
+++ b/app/src/main/res/layout/activity_edit_doctor2.xml
@@ -180,6 +180,7 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="16dp"
             android:layout_marginBottom="16dp"
+            android:visibility="invisible"
             app:layout_constraintBottom_toTopOf="@+id/updateDoctorBtn"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
