--- a/app/src/main/res/layout/activity_myprescription.xml
+++ b/app/src/main/res/layout/activity_myprescription.xml
@@ -16,8 +16,8 @@
         app:srcCompat="@drawable/header" />
 
     <LinearLayout
-        android:layout_width="409dp"
-        android:layout_height="597dp"
+        android:layout_width="410dp"
+        android:layout_height="606dp"
         android:orientation="horizontal"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -28,6 +28,21 @@
             android:id="@+id/pres_recycler_list"
             android:layout_width="match_parent"
             android:layout_height="match_parent" />
+
     </LinearLayout>
+
+    <TextView
+        android:id="@+id/textView6"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="My Prescription"
+        android:textColor="#FFFFFF"
+        android:textSize="18sp"
+        app:layout_constraintBottom_toBottomOf="@+id/imageView17"
+        app:layout_constraintEnd_toEndOf="@+id/imageView17"
+        app:layout_constraintHorizontal_bias="0.146"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/imageView17"
+        app:layout_constraintVertical_bias="0.484" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
