--- a/app/src/main/res/layout/activity_edit_doctor2.xml
+++ b/app/src/main/res/layout/activity_edit_doctor2.xml
@@ -50,10 +50,11 @@
             android:id="@+id/imageView22"
             android:layout_width="0dp"
             android:layout_height="450dp"
-            android:layout_marginTop="32dp"
+            android:layout_marginTop="24dp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/imageView20"
+            app:srcCompat="@drawable/header"
             tools:srcCompat="@drawable/header" />
 
         <TextView
