--- a/app/src/main/res/layout/activity_patient_sign_up.xml
+++ b/app/src/main/res/layout/activity_patient_sign_up.xml
@@ -124,7 +124,7 @@
             android:id="@+id/textView25"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="38dp"
+            android:layout_marginTop="30dp"
             android:text="@string/enter_details"
             android:textSize="36sp"
             app:layout_constraintEnd_toEndOf="parent"
@@ -156,26 +156,28 @@
             app:layout_constraintTop_toTopOf="@+id/imageView5" />
 
         <ImageView
-            android:id="@+id/imageView17"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:id="@+id/patientDp"
+            android:layout_width="200dp"
+            android:layout_height="150dp"
             android:layout_marginTop="16dp"
-            app:layout_constraintEnd_toStartOf="@+id/imageButton"
+            android:layout_marginBottom="24dp"
+            app:layout_constraintBottom_toTopOf="@+id/sign_up_first_name"
+            app:layout_constraintEnd_toStartOf="@+id/selectPatientImageBtn"
             app:layout_constraintHorizontal_bias="0.5"
             app:layout_constraintStart_toEndOf="@+id/imageView5"
             app:layout_constraintTop_toBottomOf="@+id/textView25"
-            tools:srcCompat="@tools:sample/avatars" />
+            app:srcCompat="@drawable/doctor_illustration" />
 
         <ImageButton
-            android:id="@+id/imageButton"
+            android:id="@+id/selectPatientImageBtn"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="8dp"
-            app:layout_constraintBottom_toBottomOf="@+id/imageView17"
+            app:layout_constraintBottom_toBottomOf="@+id/patientDp"
             app:layout_constraintEnd_toStartOf="@+id/imageView5"
             app:layout_constraintHorizontal_bias="0.5"
-            app:layout_constraintStart_toEndOf="@+id/imageView17"
-            app:layout_constraintTop_toTopOf="@+id/imageView17"
+            app:layout_constraintStart_toEndOf="@+id/patientDp"
+            app:layout_constraintTop_toTopOf="@+id/patientDp"
             app:srcCompat="@android:drawable/ic_menu_camera" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
