--- a/app/src/main/res/layout/activity_edit_doctor2.xml
+++ b/app/src/main/res/layout/activity_edit_doctor2.xml
@@ -53,7 +53,7 @@
             android:layout_marginTop="24dp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/imageView20"
+            app:layout_constraintTop_toBottomOf="@+id/imageView17"
             app:srcCompat="@drawable/header"
             tools:srcCompat="@drawable/header" />
 
@@ -186,6 +186,18 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/imageView22" />
+
+        <ImageView
+            android:id="@+id/imageView17"
+            android:layout_width="0dp"
+            android:layout_height="200dp"
+            android:layout_marginStart="32dp"
+            android:layout_marginTop="16dp"
+            android:layout_marginEnd="32dp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/imageView20"
+            app:srcCompat="@drawable/img1" />
 
 
     </androidx.constraintlayout.widget.ConstraintLayout>
